# python-project-49

./: Makefile  README.md  brain_calc.cast  brain_calc.txt  brain_even.cast  brain_gcd.cast  brain_gcd.txt  brain_prime.cast  brain_progression.cast  demo_grain_games.cast  makefile  pyproject.toml
brain_games/: cli.py  configure.py  consts.py  engine.py  util.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
