[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aleksey <pdskate88@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:game_parity_check"
brain-calc = "brain_games.scripts.brain_calc:game_calc"
brain-gcd = "brain_games.scripts.brain_gcd:game_gcd"
brain-progression = "brain_games.scripts.brain_progression:game_progression"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"#!/usr/bin/env python3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
