[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Set of mathematical minigames for the terminal"
authors = ["Aleksey <pdskate88@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Habited/python-project-49"
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:run_even_games"
brain-calc = "brain_games.scripts.brain_calc:run_calc_games"
brain-gcd = "brain_games.scripts.brain_gcd:run_gcd_games"
brain-progression = "brain_games.scripts.brain_progression:run_progression_games"
brain-prime = "brain_games.scripts.brain_prime:run_prime_games"


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
